[project]
name = "prompt-clustering-viz"
version = "0.1.0"
description = "BGE ONNX + HDBSCAN + UMAP (Java v1-compatible visualization)"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime>=1.17.0",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.6",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["prompt_cluster"]

